--- a/Symfony/app/config/parameters.yml
+++ b/Symfony/app/config/parameters.yml
@@ -1,10 +1,10 @@
 parameters:
     database_driver: pdo_mysql
     database_host: 127.0.0.1
-    database_port: null
-    database_name: symfony
-    database_user: root
-    database_password: null
+    database_port: 3306
+    database_name: elibre
+    database_user: elibre
+    database_password: MoisBeag
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
