--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -24,7 +24,8 @@ framework:
 # Twig Configuration
 twig:
     debug:            %kernel.debug%
-    strict_variables: %kernel.debug%
+    #strict_variables: %kernel.debug%
+    strict_variables: false
 
 # Assetic Configuration
 assetic:
