+ login form + translation support begin according to user locale

--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -4,7 +4,8 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
+#    translator:      { fallback: en }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -16,6 +17,7 @@ framework:
         engines: ['twig']
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
+#    default_locale:  "uk"
     trusted_proxies: ~
     session:         ~
     fragments:       ~
