--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -18,22 +18,22 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
+#        login:
+#            pattern:  ^/login$
+#            security: false
 
-        secured_area:
-            pattern:    ^/demo/secured/
+        main:
+            pattern:    ^/
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                check_path: login_check
+                login_path: login
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
+                path:   logout
+#                target: _demo
+            anonymous: true
             #http_basic:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+#        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/secured/, roles: ROLE_ADMIN }
